--- a/project_tracker/templates/base.html
+++ b/project_tracker/templates/base.html
@@ -29,14 +29,15 @@
     <style>
         /* Color palette */
         :root {
-        --deep-navy: #292f56;
-        --plum-purple: #844273;
-        --coral-pink: #cf6364;
-        --golden-amber: #e2a946;
-        --lime-green: #acfa70;
-        --pure-white: #ffffff;
-        --pure-black: #000000;
-    }
+            --deep-navy: #292f56;
+            --plum-purple: #844273;
+            --coral-pink: #cf6364;
+            --golden-amber: #e2a946;
+            --lime-green: #acfa70;
+            --pure-white: #ffffff;
+            --pure-black: #000000;
+        }
+
         /* Custom styles for the footer */
         footer {
             background-color: var(--deep-navy);
@@ -85,13 +86,21 @@
         </div>
     </footer>
 
+    <!-- Bootstrap and jQuery JS -->
     <script src="https://kit.fontawesome.com/8553d96c4f.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 
     <!-- JavaScript and other body elements go here -->
-    {% block extra_body %}{% endblock %}
+    {% block extra_body %} {% endblock %}
 </body>
 
 
